--- a/pom.xml
+++ b/pom.xml
@@ -102,11 +102,7 @@
             <artifactId>controlsfx</artifactId>
             <version>11.2.1</version>
         </dependency>
-        <dependency>
-            <groupId>win.zqxu</groupId>
-            <artifactId>jrviewer-fx</artifactId>
-            <version>latest-version</version>
-        </dependency>
+
 
 
 
@@ -125,26 +121,82 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>
+                                com.andre.dojo.invoicemanager.HelloApplication
+                            </mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+
+                </configuration>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>com.andre.dojo.invoicemanager/com.andre.dojo.invoicemanager.HelloApplication
-                            </mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-                        </configuration>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
+
                 </executions>
             </plugin>
+
         </plugins>
+
     </build>
+
+<!--    okoko-->
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <version>3.8.1</version>-->
+<!--                <configuration>-->
+<!--                    <source>21</source>-->
+<!--                    <target>21</target>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
+
+<!--    <plugin>-->
+<!--        <groupId>org.openjfx</groupId>-->
+<!--        <artifactId>javafx-maven-plugin</artifactId>-->
+<!--        <version>0.0.8</version>-->
+<!--        <configuration>-->
+<!--            <mainClass>com.andre.dojo.invoicemanager.HelloApplication</mainClass>-->
+<!--            <options>-->
+<!--                <option>&#45;&#45;add-modules</option>-->
+<!--                <option>javafx.controls,javafx.fxml</option>-->
+<!--            </options>-->
+<!--        </configuration>-->
+<!--        <executions>-->
+<!--            <execution>-->
+<!--                &lt;!&ndash; Default configuration for running with: mvn clean javafx:run &ndash;&gt;-->
+<!--                <id>default-cli</id>-->
+<!--                <configuration>-->
+<!--                    <mainClass>com.andre.dojo.invoicemanager/com.andre.dojo.invoicemanager.HelloApplication-->
+<!--                    </mainClass>-->
+<!--                    <launcher>app</launcher>-->
+<!--                    <jlinkZipName>app</jlinkZipName>-->
+<!--                    <jlinkImageName>app</jlinkImageName>-->
+<!--                    <noManPages>true</noManPages>-->
+<!--                    <stripDebug>true</stripDebug>-->
+<!--                    <noHeaderFiles>true</noHeaderFiles>-->
+<!--                </configuration>-->
+<!--            </execution>-->
+<!--        </executions>-->
+<!--    </plugin>-->
+
+
+    <!--        </plugins>-->
+<!--    </build>-->
+
+
 </project>
